--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 </div>
 
 <script>
-var _gaq=[['_setAccount','UA-XXXXXX-X']];
+var _gaq=[['_setAccount','UA-18573291-1']];
 	_gaq.push(['_trackPageview']);
 (function(d,t){var
 g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';
