--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 <body>
 <div class="container">
-	<img class="row" src="resources/postits.jpg">
+	<div class="row">
+		<img class="img-responsive" src="resources/postits.jpg">
+	</div>
 	<header class="row jumbotron">
 		<div class="col-sm-12">
 			<h3>Als Vanzelf</h3>
@@ -171,23 +173,23 @@
 	</section>
 	
 	<section class="row text-center" id="startups">
-		<div class="col-sm-12">
+		<div class="col-xs-12">
 			<h3>Startups</h3>
 		</div>
-		<div class="col-sm-2 col-sm-offset-1" title="Stichting DoeHetNietZelf">
-			<p class="logo"><span class="alignment-helper"></span><img src="resources/startups/doehetnietzelf.jpg"></p>
+		<div class="col-xs-2 col-xs-offset-1" title="Stichting DoeHetNietZelf">
+			<p class="logo"><img class="img-responsive" src="resources/startups/doehetnietzelf.jpg"></p>
 		</div>
-		<div class="col-sm-2" title="DLR Adviesgroep">
-			<p class="logo"><span class="alignment-helper"></span><img src="resources/startups/dlr.png"></p>
+		<div class="col-xs-2" title="DLR Adviesgroep">
+			<p class="logo"><img class="img-responsive" src="resources/startups/dlr.png"></p>
 		</div>
-		<div class="col-sm-2" title="Jouw NEST">
-			<p class="logo"><span class="alignment-helper"></span><img src="resources/startups/jouwnest.png"></p>
+		<div class="col-xs-2" title="Jouw NEST">
+			<p class="logo"><img class="img-responsive" src="resources/startups/jouwnest.png"></p>
 		</div>
-		<div class="col-sm-2" title="Spons">
-			<p class="logo"><span class="alignment-helper"></span><img src="resources/startups/spons.png"></p>
+		<div class="col-xs-2" title="Spons">
+			<p class="logo"><img class="img-responsive" src="resources/startups/spons.png"></p>
 		</div>
-		<div class="col-sm-2" title="CitySessies">
-			<p class="logo"><span class="alignment-helper"></span><img src="resources/startups/citysessies.png"></p>
+		<div class="col-xs-2" title="CitySessies">
+			<p class="logo"><img class="img-responsive" src="resources/startups/citysessies.png"></p>
 		</div>
 	</section>
 	
@@ -198,7 +200,7 @@
 			Neem contact op via <span class="text-muted">+31 6</span> 57 157 653
 			of lode apenstaartje dit domein.
 		</p>
-		<p class="pull-right">2013 - heden</p>
+		<p class="pull-right">2011 - heden</p>
 	</footer>
 </div>
 
