ffixes ios bug with long textarea placeholders

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<p>Bel op <span class="text-muted">+31 6</span> 57 157 653 of schrijf hier een berichtje.</p>
 					<form>
 						<div class="form-group">
-							<textarea class="form-control" name="message" placeholder="Berichten met 140 karakters of minder krijgen voorang. De rest komt face-to-face wel." tabindex="1"></textarea>
+							<textarea class="form-control" name="message" placeholder="Het liefst 140 karakters of minder. Anders is bellen of face-to-face beter." tabindex="1"></textarea>
 						</div>
 						<div class="form-group">
 							<label for="availability">Hoe ben je bereikbaar?</label>
