--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Als Vanzelf &mdash; structuur makers</title>
+	<title>Als Vanzelf</title>
 	
 	<link href="resources/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<!--<link href="resources/bootstrap-3.3.5/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">-->
 	<link href="resources/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="resources/s.css" rel="stylesheet" type="text/css">
 	
@@ -16,12 +15,12 @@
 	<script>$.fn.modal || document.write('<script type="text/javascript" src="resources/bootstrap-3.3.5/js/bootstrap.min.js"><\/script>')</script>
 	<script src="resources/s.js" type="text/javascript"></script>
 	
-	<meta name="description" content="Hi. I'm Lode. I design for interaction and communication. Find here my learning, working, playing and writing.">
-	<meta name="keywords" content="interaction design, communication design, group communication, learning, work is play">
-	<meta property="og:title" content="Designing for interaction and communication &mdash; Lode Claassen">
-	<meta property="og:image" content="resources/lode-in-a-box.jpg">
-	<meta property="og:url" content="http://www.lodeclaassen.nl/">
-	<meta property="og:description" content="Hi. I'm Lode. I design for interaction and communication. Find here my learning, working, playing and writing.">
+	<meta name="description" content="Ondersteuning van beginnende of vastzittende startups in concept, structuur en ontwikkelproces.">
+	<meta name="keywords" content="startup, flow, focus, structuur, simpel, brainstorm, postits">
+	<meta property="og:title" content="Ondersteuning van startups &mdash; Als Vanzelf">
+	<meta property="og:image" content="resources/postits.jpg">
+	<meta property="og:url" content="http://www.alsvanzelf.nl/">
+	<meta property="og:description" content="Ondersteuning van beginnende of vastzittende startups in concept, structuur en ontwikkelproces.">
 </head>
 <body>
 <div class="container">
