work around for contact form

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 				<div class="col-sm-10" id="contact">
 					<h3>Vragen? Afspreken?</h3>
 					<p>Bel op <span class="text-muted">+31 6</span> 57 157 653 of schrijf hier een berichtje.</p>
-					<form>
+					<form action="mailto:lode@alsvanzelf.nl">
 						<div class="form-group">
-							<textarea class="form-control" name="message" placeholder="Het liefst 140 karakters of minder. Anders is bellen of face-to-face beter." tabindex="1"></textarea>
+							<textarea class="form-control" name="body" placeholder="Het liefst 140 karakters of minder. Anders is bellen of face-to-face beter." tabindex="1"></textarea>
 						</div>
 						<div class="form-group">
 							<label for="availability">Hoe ben je bereikbaar?</label>
-							<input id="availability" name="availability" class="form-control" type="text" placeholder="Telefoon en/of e-mail" tabindex="2">
+							<input id="availability" name="subject" class="form-control" type="text" placeholder="Telefoon en/of e-mail" tabindex="2">
 						</div>
 						<div class="form-group">
 							<input type="submit" value="Versturen" class="btn btn-success" tabindex="3">
