--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<p>
 								Ajj, er ging iets mis... Sorry.<br>
 								Kun je even bellen of het mailen?<br>
-								<span class="email"></span>
+								<a href="mailto:lode@alsvanzelf.nl">lode@alsvanzelf.nl</a>
 							</p>
 						</div>
 					</form>
@@ -208,7 +208,7 @@
 		<p class="pull-left">
 			Als Vanzelf is de startup van <a href="//www.lodeclaassen.nl">Lode Claassen</a>.
 			Neem contact op via <span class="text-muted">+31 6</span> 57 157 653
-			of lode apenstaartje dit domein.
+			of <a href="mailto:lode@alsvanzelf.nl">lode@alsvanzelf.nl</a>.
 		</p>
 		<p class="pull-right">2011 - heden</p>
 	</footer>
