adds offer for new feedback tool

--- a/index.html
+++ b/index.html
@@ -137,11 +137,27 @@
 			
 			<section class="row panel panel-default offer">
 				<div class="panel-heading">
+					<h4>Kwalitatieve feedback van je gebruikers</h4>
+				</div>
+				<div class="panel-body">
+					<p>
+						In ontwikkeling: een tool om gebruikers om feedback te vragen als ze nieuwe functionaliteiten voorstellen voor op je website.
+					</p>
+				</div>
+				<div class="panel-footer action">
+					<p class="pull-left"><em>Nog in ontwikkelling</em></p>
+					<button class="btn btn-default goto-contact pull-right">Interessant?</button>
+					<div class="clearfix"></div>
+				</div>
+			</section>
+			
+			<section class="row panel panel-default offer">
+				<div class="panel-heading">
 					<h4>Simpele open source tools voor makers</h4>
 				</div>
 				<div class="panel-body">
 					<p>
-						Uit ervaring met tig startups is een een set van hulpmiddelen ontstaan.
+						Uit ervaring met startups is een een set van hulpmiddelen ontstaan.
 						Tools om snel prototypes maken en te gebruiken in productie.
 					</p>
 					<p>
