--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 				</div>
 				<div class="panel-body">
 					<p>
-						In ontwikkeling: een tool om gebruikers om feedback te vragen als ze nieuwe functionaliteiten voorstellen voor op je website.
+						<em>Elemental Feedback</em> is een tool om gebruikers om feedback te vragen als ze nieuwe functionaliteiten voorstellen voor op je website.
 					</p>
 				</div>
 				<div class="panel-footer action">
-					<p class="pull-left"><em>Nog in ontwikkelling</em></p>
+					<p class="pull-left">Elemental Feedback: gratis</p>
 					<button class="btn btn-default goto-contact pull-right">Interessant?</button>
 					<div class="clearfix"></div>
 				</div>
@@ -190,7 +190,7 @@
 					<p>Een eenvoudig, uitbreidbaar en snel framework dat niets afdwingt maar helpt.</p>
 				</div>
 				<div class="panel-footer action">
-					<p class="pull-left">Gratis</p>
+					<p class="pull-left">Gratis en vrij</p>
 					<button class="btn btn-default goto-contact pull-right">Hulp nodig?</button>
 					<div class="clearfix"></div>
 				</div>
