promote ef as an easier start

--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
 			
 			<section class="row panel panel-default offer">
 				<div class="panel-heading">
+					<h4>Kwalitatieve feedback van je gebruikers</h4>
+				</div>
+				<div class="panel-body">
+					<p>
+						<em>Elemental Feedback</em> is een tool om gebruikers om feedback te vragen als ze nieuwe functionaliteiten voorstellen voor op je website.
+					</p>
+				</div>
+				<div class="panel-footer action">
+					<p class="pull-left">Elemental Feedback: gratis</p>
+					<button class="btn btn-default goto-contact pull-right">Proberen?</button>
+					<div class="clearfix"></div>
+				</div>
+			</section>
+			
+			<section class="row panel panel-default offer">
+				<div class="panel-heading">
 					<h4>Snel testen van nieuwe features</h4>
 				</div>
 				<div class="panel-body">
@@ -130,22 +146,6 @@
 				</div>
 				<div class="panel-footer action">
 					<p class="pull-left">Check It: &euro; 30 per maand</p>
-					<button class="btn btn-default goto-contact pull-right">Interessant?</button>
-					<div class="clearfix"></div>
-				</div>
-			</section>
-			
-			<section class="row panel panel-default offer">
-				<div class="panel-heading">
-					<h4>Kwalitatieve feedback van je gebruikers</h4>
-				</div>
-				<div class="panel-body">
-					<p>
-						<em>Elemental Feedback</em> is een tool om gebruikers om feedback te vragen als ze nieuwe functionaliteiten voorstellen voor op je website.
-					</p>
-				</div>
-				<div class="panel-footer action">
-					<p class="pull-left">Elemental Feedback: gratis</p>
 					<button class="btn btn-default goto-contact pull-right">Interessant?</button>
 					<div class="clearfix"></div>
 				</div>
