https is now working and enforced

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="keywords" content="startup, flow, focus, structuur, simpel, brainstorm, postits">
 	<meta property="og:title" content="Ondersteuning van startups &mdash; Als Vanzelf">
 	<meta property="og:image" content="resources/postits.jpg">
-	<meta property="og:url" content="http://www.alsvanzelf.nl/">
+	<meta property="og:url" content="https://www.alsvanzelf.nl/">
 	<meta property="og:description" content="Ondersteuning van beginnende of vastzittende startups in concept, structuur en ontwikkelproces.">
 </head>
 <body>
