--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 							</p>
 						</div>
 					</form>
+					<br>
+					<p class="small text-muted">
+						Of neem contact op via
+						<a href="https://keybase.io/lodeclaassen">Keybase</a>
+						of
+						<a href="https://www.linkedin.com/in/lodeclaassen/">LinkedIn</a>.
+					</p>
 				</div>
 			</section>
 		</section>
